# empty-project

./: .gitignore  deno.json  main.ts
src/: args.ts  path.ts
src/git/: cli.ts  is_excluded.ts  mod.test.ts  mod.ts  model.ts  read_git_ignore.ts
src/template/: mod.ts  model.ts  read_template.ts  read_templates.ts  template_writer.ts  variables.ts
template/: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  flow  flow.py
template/.github/workflows/: build.yml  linter.yml
template/src/: entry_point.cc  main.cc  version.hh.in
template/tools/: release.py
template/tools/archives/: __init__.py
template/tools/flow/: run.py  verify.py
template/tools/flow/lib/: __init__.py  matrix.py  runner.py  uname.py
template/tools/github/: api.py  changelog.py  cmake.py  git.py  runner.py
template/tools/win32/: sign.py
